- swithed parts of implemetation from URL to URI